# UXX

./: CMakeLists.txt  LICENSE  README.md
include/UXX/: Backend.hpp  Renderer.hpp
libs/GLAD/include/glad/: glad.h
src/: Backend.cpp  Renderer.cpp  main.cpp
src/inc/: uxx_input.hpp
src/include/: Backend.hpp
third_party_libs/GLAD/src/: glad.c
